# learning_c_game

./: .gitignore  CMakeLists.txt  CMakePresets.json  game.c  game.h  main.c
